--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,14 @@
 [tool.black]
 line-length = 119
+
+[tool.pylint.format]
+max-line-length = 119
+
+[tool.pylint.MASTER]
+ignore-patterns = '''test_.*\.py
+'''
+
+[tool.pylint."MESSAGE CONTROL"]
+disable = '''logging-fstring-interpolation,
+    missing-module-docstring,
+'''
