--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ line-length = 119
 max-line-length = 119
 
 [tool.pylint.MASTER]
-ignore-patterns = '''test_.*\.py
+ignore-patterns = '''test_.*\.py,
+    examples/.*\.py,
+    setup.py
 '''
 
 [tool.pylint."MESSAGE CONTROL"]
