--- a/.github/workflows/publish-to-test-pypi.yaml
+++ b/.github/workflows/publish-to-test-pypi.yaml
@@ -38,6 +38,7 @@ jobs:
       name: pypi
       url: https://pypi.org/p/fabricator-ai
     permissions:
+      contents: read
       id-token: write
     steps:
       - name: Download all the dists
@@ -99,6 +100,7 @@ jobs:
       url: https://test.pypi.org/p/fabricator-ai
 
     permissions:
+      contents: read
       id-token: write
 
     steps:
