--- a/.github/workflows/publish-to-test-pypi.yaml
+++ b/.github/workflows/publish-to-test-pypi.yaml
@@ -37,9 +37,6 @@ jobs:
     environment:
       name: pypi
       url: https://pypi.org/p/fabricator-ai
-    permissions:
-      contents: read
-      id-token: write
     steps:
       - name: Download all the dists
         uses: actions/download-artifact@v3
@@ -48,6 +45,9 @@ jobs:
           path: dist/
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.TESTPYPI_TOKEN }}
 
   github-release:
     name: >-
@@ -99,10 +99,6 @@ jobs:
       name: testpypi
       url: https://test.pypi.org/p/fabricator-ai
 
-    permissions:
-      contents: read
-      id-token: write
-
     steps:
       - name: Download all the dists
         uses: actions/download-artifact@v3
@@ -112,4 +108,5 @@ jobs:
       - name: Publish distribution 📦 to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          repository-url: https://test.pypi.org/legacy/
+          user: __token__
+          password: ${{ secrets.TESTPYPI_TOKEN }}
