--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -15,6 +15,10 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.x"
+    - name: Lint with pylint
+      run: python3 -m pylint fabricator
+    - name: Test with pytest
+      run: python3 -m pytest tests
     - name: Install pypa/build
       run: >-
         python3 -m
