--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -15,6 +15,12 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.x"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install pytest pytest-sugar
+        python -m pip install pylint
+        python -m pip install -r requirements.txt
     - name: Lint with pylint
       run: python3 -m pylint fabricator
     - name: Test with pytest
