--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -5,6 +5,23 @@ on:
     types: [published]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.x"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install -r requirements.txt
+        pip install pylint
+    - name: Analysing the code with pylint
+      run: |
+        pylint $(git ls-files '*.py') --fail-under 9.3
+
   build:
     name: Build distribution
     runs-on: ubuntu-latest
@@ -15,16 +32,6 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.x"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest pytest-sugar
-        python -m pip install pylint
-        python -m pip install -r requirements.txt
-    - name: Lint with pylint
-      run: python3 -m pylint fabricator
-    - name: Test with pytest
-      run: python3 -m pytest tests
     - name: Install pypa/build
       run: >-
         python3 -m
@@ -42,6 +49,7 @@ jobs:
   publish-to-testpypi:
     name: Publish distribution to TestPyPI
     needs:
+      - lint
       - build
     runs-on: ubuntu-latest
 
